初始化git提交

--- a/src/app/(legal)/privacy-policy/page.mdx
+++ b/src/app/(legal)/privacy-policy/page.mdx
@@ -1,36 +1,36 @@
-# Privacy Policy for ShipAny
+# Privacy Policy for Anime Rangers X Tier List
 
 ## Introduction
 
-Welcome to ShipAny, the **NextJS Boilerplate** designed to help you build AI SaaS startups quickly and efficiently. At ShipAny, your privacy is of utmost importance to us, and this privacy policy outlines how we collect, use, and protect your personal information when you use our services.
+Welcome to Anime Rangers X Tier List, your ultimate resource for **Anime Rangers X** game guides, tier lists, and strategies. At Anime Rangers X Tier List, your privacy is of utmost importance to us, and this privacy policy outlines how we collect, use, and protect your personal information when you use our website.
 
 ## Information Collection and Use
 
-We collect the following types of data to provide you with a better experience while using ShipAny:
+We collect the following types of data to provide you with a better experience while using our website:
 
 1. **Account Information**
 
-   - **What We Collect**: This includes your name, email address, and any other information you provide when creating an account.
-   - **Purpose**: To manage your account and provide customer support.
+   - **What We Collect**: This includes your name, email address, and any other information you provide when creating an account or subscribing to updates.
+   - **Purpose**: To manage your account, provide customer support, and send you game updates and tier list notifications.
 
 2. **Usage Details**
 
-   - **What We Collect**: Information about how you use ShipAny, including your interactions, features accessed, and usage frequency.
-   - **Purpose**: To analyze user engagement and improve our services.
+   - **What We Collect**: Information about how you use our website, including pages visited, tier lists viewed, guides accessed, and usage frequency.
+   - **Purpose**: To analyze user engagement, improve our content, and provide better game guides and tier lists.
 
 3. **Device Information**
 
-   - **What We Collect**: Data regarding the devices you use to access ShipAny, such as device type, operating system, and browser type.
-   - **Purpose**: To optimize our services for different devices and ensure compatibility.
+   - **What We Collect**: Data regarding the devices you use to access our website, such as device type, operating system, and browser type.
+   - **Purpose**: To optimize our website for different devices and ensure compatibility across all platforms.
 
 4. **Cookies**
 
-   - **What We Collect**: Small data files placed on your device that help us track user preferences and improve user experience.
-   - **Purpose**: To enhance the functionality of our services and personalize your experience.
+   - **What We Collect**: Small data files placed on your device that help us track user preferences, remember your tier list settings, and improve user experience.
+   - **Purpose**: To enhance the functionality of our website, personalize your gaming experience, and remember your preferences.
 
-5. **Payment and Billing Information**
-   - **What We Collect**: Information regarding your payment methods, such as credit card number, billing address, and any details required for transaction processing.
-   - **Purpose**: To facilitate billing and payment processing for our services.
+5. **Game-Related Information**
+   - **What We Collect**: Information about your game progress, favorite units, tier list preferences, and feedback on our guides.
+   - **Purpose**: To provide personalized recommendations and improve our tier lists and strategy guides.
 
 ## Data Storage and Security
 
@@ -43,6 +43,16 @@ We do not sell, trade, or otherwise transfer your personal information to outsid
 - To comply with legal obligations or respond to lawful requests from public authorities.
 - To protect our rights, property, or safety, or that of our users or others.
 - To provide services through trusted third-party partners who assist us in operating our website or conducting our business, subject to confidentiality agreements.
+- To share aggregated, non-personally identifiable information about game statistics and tier list usage for research purposes.
+
+## Third-Party Services
+
+Our website may contain links to external services such as:
+- Roblox (for game access)
+- Discord (for community features)
+- Social media platforms
+
+Please note that we are not responsible for the privacy practices of these third-party services. We encourage you to review their privacy policies.
 
 ## Changes to This Policy
 
@@ -52,7 +62,7 @@ We may update this privacy policy from time to time. We will notify you of any c
 
 If you have any questions or concerns about this privacy policy or our data practices, please contact us at:
 
-**Copyright Owner**: [shipany.ai](http://shipany.ai)
-**Email**: [support@shipany.ai](mailto:support@shipany.ai)
+**Website**: Anime Rangers X Tier List
+**Email**: [Contact information to be added]
 
-By using ShipAny, you consent to our privacy policy and agree to its terms. Thank you for trusting us with your information!
+By using our website, you consent to our privacy policy and agree to its terms. Thank you for trusting us with your information and for being part of the Anime Rangers X community!
