--- a/src/app/(legal)/terms-of-service/page.mdx
+++ b/src/app/(legal)/terms-of-service/page.mdx
@@ -2,15 +2,15 @@
 
 ## Introduction and Acceptance of Terms
 
-Welcome to **ShipAny**, a NextJS boilerplate designed for building AI SaaS startups quickly and efficiently. By accessing or using our service, you agree to be bound by these Terms of Service. If you do not agree with any of these terms, please do not use our service.
+Welcome to **Anime Rangers X Tier List**, your ultimate resource for Anime Rangers X game guides, tier lists, strategies, and community content. By accessing or using our website, you agree to be bound by these Terms of Service. If you do not agree with any of these terms, please do not use our website.
 
-## Use of the Service
+## Use of the Website
 
-ShipAny provides users with a comprehensive platform to build and launch AI SaaS startups using our pre-built templates and infrastructure. You agree to use the service in accordance with all applicable local, state, national, and international laws and regulations.
+Anime Rangers X Tier List provides users with comprehensive game guides, tier lists, strategies, redemption codes, and community resources for the Anime Rangers X game. You agree to use our website in accordance with all applicable local, state, national, and international laws and regulations.
 
 ## User Accounts and Registration
 
-1. **Account Creation**: To access certain features of the service, you need to create an account. You must provide accurate and complete information during the registration process.
+1. **Account Creation**: To access certain features of our website (such as saving tier lists or receiving updates), you may need to create an account. You must provide accurate and complete information during the registration process.
 
 2. **Account Security**: You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account.
 
@@ -18,68 +18,71 @@ ShipAny provides users with a comprehensive platform to build and launch AI SaaS
 
 ## Content and Intellectual Property Rights
 
-All content provided through ShipAny, including but not limited to templates, code, infrastructure setup, and documentation, is protected under copyright law. The copyright owner of ShipAny is **shipany.ai**.
+All content provided through Anime Rangers X Tier List, including but not limited to tier lists, guides, strategies, images, and documentation, is protected under copyright law. 
 
-- You acknowledge that you do not own the underlying technology or intellectual property that makes up the ShipAny service, and you agree to respect the intellectual property rights of shipany.ai and any third parties.
-- While you retain ownership of your custom implementations and modifications, the core ShipAny platform and templates remain the property of shipany.ai.
+- You acknowledge that you do not own the underlying content, tier lists, or intellectual property that makes up our website, and you agree to respect our intellectual property rights and those of third parties.
+- The Anime Rangers X game itself is owned by its respective developers and is available on the Roblox platform.
+- While you may share and discuss our content, you may not reproduce, distribute, or commercially use our tier lists and guides without permission.
 
 ## Prohibited Activities
 
-You agree not to engage in any of the following prohibited activities while using ShipAny:
+You agree not to engage in any of the following prohibited activities while using our website:
 
-- Unauthorized access to or distribution of our proprietary code and templates
-- Reselling or redistributing ShipAny templates without authorization
-- Interfering with or disrupting the security or performance of the service
-- Using the service for any illegal or unauthorized purpose
-- Attempting to bypass any security features of the service
+- Unauthorized copying or distribution of our tier lists, guides, and content
+- Reselling or redistributing our content without authorization
+- Interfering with or disrupting the security or performance of our website
+- Using our website for any illegal or unauthorized purpose
+- Attempting to bypass any security features of our website
+- Posting false or misleading information about game content
+- Harassing other users or engaging in toxic behavior in community features
 
 ## Privacy and Data Collection
 
-ShipAny collects the following types of data:
+Anime Rangers X Tier List collects the following types of data:
 
 - **Account Information**: Information you provide when creating an account
-- **Usage Details**: Data related to your activity on our service
-- **Device Information**: Information about the device you use to access our service
-- **Cookies**: Data that helps us enhance your experience with our service
-- **Payment and Billing Information**: Data necessary to process payments
+- **Usage Details**: Data related to your activity on our website
+- **Device Information**: Information about the device you use to access our website
+- **Cookies**: Data that helps us enhance your experience with our website
+- **Game-Related Information**: Your tier list preferences and feedback on our guides
 
 For more details on data collection practices, please refer to our separate [Privacy Policy](/privacy-policy).
 
-## Pricing and Payments
+## Website Access and Content
 
-- All purchases are final and non-refundable unless otherwise required by law
-- Prices are subject to change with notice to users
-- You agree to pay all charges associated with your selected plan
-- Payment terms are based on your selected payment method and plan
+- Our website and tier lists are provided free of charge
+- We reserve the right to introduce premium features in the future with appropriate notice
+- All redemption codes and guides are provided for informational purposes only
+- We do not guarantee the availability or accuracy of redemption codes as they are controlled by the game developers
 
 ## Termination
 
-We reserve the right to terminate or suspend your access to the service at our sole discretion, without notice, for conduct that we believe violates these Terms or is harmful to other users of the service, us, or third parties.
+We reserve the right to terminate or suspend your access to our website at our sole discretion, without notice, for conduct that we believe violates these Terms or is harmful to other users of our website, us, or third parties.
 
 ## Disclaimer of Warranties
 
-The service is provided on an "as is" and "as available" basis. We make no warranties or representations about the accuracy, reliability, or availability of the service and disclaim all warranties to the fullest extent permitted by law.
+Our website is provided on an "as is" and "as available" basis. We make no warranties or representations about the accuracy, reliability, or availability of our website, tier lists, or game information, and disclaim all warranties to the fullest extent permitted by law.
 
 ## Limitation of Liability
 
-To the fullest extent permitted by law, shipany.ai shall not be liable for any direct, indirect, incidental, special, consequential, or punitive damages arising from the use of or inability to use the service.
+To the fullest extent permitted by law, Anime Rangers X Tier List shall not be liable for any direct, indirect, incidental, special, consequential, or punitive damages arising from the use of or inability to use our website.
 
 ## Indemnification
 
-You agree to indemnify and hold harmless shipany.ai, its affiliates, and their respective officers, directors, employees, and agents from any claims, damages, losses, liabilities, and expenses (including attorneys' fees) arising from your use of the service or violation of these Terms.
+You agree to indemnify and hold harmless Anime Rangers X Tier List, its affiliates, and their respective officers, directors, employees, and agents from any claims, damages, losses, liabilities, and expenses (including attorneys' fees) arising from your use of our website or violation of these Terms.
 
 ## Governing Law and Dispute Resolution
 
-These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which shipany.ai operates, without regard to its conflict of law provisions. Any disputes arising from these Terms or the service will be resolved through binding arbitration in accordance with applicable laws.
+These Terms shall be governed by and construed in accordance with applicable laws, without regard to conflict of law provisions. Any disputes arising from these Terms or our website will be resolved through binding arbitration in accordance with applicable laws.
 
 ## Changes to These Terms
 
-We reserve the right to update or modify these Terms at any time. Changes will be effective immediately upon posting on our website. Your continued use of the service after any changes signifies your acceptance of the new terms.
+We reserve the right to update or modify these Terms at any time. Changes will be effective immediately upon posting on our website. Your continued use of our website after any changes signifies your acceptance of the new terms.
 
 ## Contact Information
 
-If you have any questions about these Terms, please contact us at [support@shipany.ai](mailto:support@shipany.ai).
+If you have any questions about these Terms, please contact us at [Contact information to be added].
 
 ---
 
-By using ShipAny, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service. Thank you for choosing ShipAny!
+By using Anime Rangers X Tier List, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service. Thank you for being part of the Anime Rangers X community!
