--- a/src/i18n/pages/landing/en.json
+++ b/src/i18n/pages/landing/en.json
@@ -14,7 +14,7 @@
       "items": [
         {
           "title": "Blog",
-          "url": "/strategies",
+          "url": "/posts",
           "icon": "RiBookOpenLine"
         }
       ]
