--- a/src/i18n/pages/landing/en.json
+++ b/src/i18n/pages/landing/en.json
@@ -427,6 +427,11 @@
               "title": "love-mbti",
               "url": "https://love-mbti.com/",
               "target": "_blank"
+            },
+            {
+              "title": "pdf to video",
+              "url": "https://pdfvideo.org/",
+              "target": "_blank"
             }
           ]
         }
